--- a/2_lexikalni_analyzator/Makefile
+++ b/2_lexikalni_analyzator/Makefile
@@ -3,13 +3,12 @@ GCC=gcc
 
 BINDIR="./bin"
 BINFILE="ll.bin"
-TESTDIR="../../testfiles"
+TESTDIR="./testfiles"
 TEST_OK_FILE="test_ok.txt"
 
 all: clean
 	@$(MAKE) -s ll.bin 
 	@$(MAKE) -s test_ok
-	@$(MAKE) -s test_nook
 	@if [ $(PRINT_OUTPUT) ]; then cat $(BINDIR)/$(TEST_OK_FILE).report; fi
 
 %.bin: %.lex
